<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:layout_width="54dp"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_notification" />

    <TextView
        style="@style/mediumMontserratMedium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/data_can_t_be_loaded"
        android:textAlignment="center"
        android:textColor="@color/neutral_08_whisper" />

    <TextView
        style="@style/mediumMontserratMedium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_70_dp"
        android:layout_marginTop="28dp"
        android:text="@string/no_internet_connection"
        android:textAlignment="center"
        android:textColor="@color/neutral_08_whisper" />

    <LinearLayout
        android:id="@+id/refresh_linear_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_110_dp"
        android:background="@drawable/shape_button_background"
        android:backgroundTint="@color/yellow_primary"
        android:paddingHorizontal="@dimen/dimen_30_dp"
        android:paddingVertical="@dimen/dimen_14_dp">

        <TextView
            style="@style/normalMontserratMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="@dimen/dimen_10_dp"
            android:text="@string/refresh"
            android:textColor="@color/neutral_01_black"
            android:textStyle="bold" />

        <ImageView
            android:layout_gravity="center"
            android:layout_width="@dimen/dimen_16_dp"
            android:layout_height="@dimen/dimen_16_dp"
            android:scaleType="centerInside"
            android:src="@drawable/ic_refresh"
            android:textAlignment="center" />
    </LinearLayout>

</LinearLayout>