<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="@dimen/dimen_16_dp"
    android:paddingBottom="@dimen/dimen_16_dp">

    <EditText
        android:id="@+id/search_edit_text"
        android:layout_width="@dimen/dimen_0_dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dimen_8_dp"
        android:background="@drawable/shape_input_background"
        android:backgroundTint="@color/neutral_02_darkest_grey"
        android:drawableStart="@drawable/ic_search"
        android:drawablePadding="@dimen/dimen_6_dp"
        android:hint="@string/search_hint"
        android:paddingVertical="11dp"
        android:paddingStart="@dimen/dimen_20_dp"
        android:textColor="@color/neutral_05_light_grey"
        android:textColorHint="@color/neutral_05_light_grey"
        app:layout_constraintEnd_toStartOf="@id/search_barrier"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/search_barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="start"
        app:constraint_referenced_ids="filter_check_box,cancel_search_text" />

    <CheckBox
        android:id="@+id/filter_check_box"
        android:layout_width="44dp"
        android:layout_height="0dp"
        android:button="@drawable/filter_button_selector"
        android:scaleType="centerCrop"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@id/search_edit_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/search_edit_text"
        app:useMaterialThemeColors="false" />


    <TextView
        android:id="@+id/cancel_search_text"
        style="@style/smallMontserratMedium"
        android:layout_width="44dp"
        android:layout_height="wrap_content"
        android:text="@string/cancel_text"
        android:textColor="@color/neutral_08_whisper"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/search_edit_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/search_edit_text" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chip_group"
        style="@style/CustomFilterStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_8_dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/search_edit_text"
        app:selectionRequired="true"
        app:singleSelection="true" />

    <TextView
        android:id="@+id/movie_title"
        style="@style/mediumMontserratMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_16_dp"
        android:text="@string/movies_title"
        android:textColor="@color/yellow_primary"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chip_group" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/main_recycler"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginVertical="@dimen/dimen_16_dp"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintBottom_toTopOf="@id/home_nav_linear_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/movie_title"
        app:spanCount="2"
        tools:listitem="@layout/layout_movie_item" />

    <LinearLayout
        android:id="@+id/home_nav_linear_layout"
        android:layout_width="@dimen/dimen_0_dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dimen_16_dp"
        android:background="@drawable/shape_rectangle_background"
        android:backgroundTint="@color/yellow_primary"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/favorites_nav_linear_layout"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:layout_width="@dimen/dimen_20_dp"
            android:layout_height="match_parent"
            android:scaleType="centerInside"
            android:src="@drawable/ic_home"
            app:tint="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dimen_16_dp"
            android:padding="@dimen/dimen_10_dp"
            android:text="@string/home_nav_text"
            android:textAlignment="center"
            android:textColor="@color/black" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/favorites_nav_linear_layout"
        android:layout_width="@dimen/dimen_0_dp"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_rectangle_background"
        android:backgroundTint="@color/neutral_02_darkest_grey"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/home_nav_linear_layout">

        <ImageView
            android:layout_width="@dimen/dimen_20_dp"
            android:layout_height="match_parent"
            android:scaleType="centerInside"
            android:src="@drawable/ic_heart_outlined"
            app:tint="@color/neutral_08_whisper" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dimen_16_dp"
            android:padding="@dimen/dimen_10_dp"
            android:text="@string/favorites_nav_text"
            android:textAlignment="center"
            android:textColor="@color/neutral_08_whisper" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>