<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/neutral_01_black"
    android:padding="@dimen/dimen_16_dp">

    <TextView
        android:id="@+id/title_text"
        style="@style/mediumMontserratMedium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/favorite_movies"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/item_recycler"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/dimen_22_dp"
        android:layout_marginBottom="@dimen/dimen_12_dp"
        app:layout_constraintBottom_toTopOf="@id/home_nav_linear_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_text"
        tools:listitem="@layout/layout_movie_item" />

    <ImageView
        android:visibility="gone"
        android:id="@+id/no_movies_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:src="@drawable/ic_no_movies"
        app:layout_constraintBottom_toTopOf="@id/home_nav_linear_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_text" />


    <LinearLayout
        android:id="@+id/home_nav_linear_layout"
        android:layout_width="@dimen/dimen_0_dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dimen_16_dp"
        android:background="@drawable/shape_rectangle_background"
        android:backgroundTint="@color/neutral_02_darkest_grey"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/favorites_nav_linear_layout"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:layout_width="@dimen/dimen_20_dp"
            android:layout_height="match_parent"
            android:scaleType="centerInside"
            android:src="@drawable/ic_home"
            app:tint="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dimen_16_dp"
            android:padding="@dimen/dimen_10_dp"
            android:text="@string/home_nav_text"
            android:textAlignment="center"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/favorites_nav_linear_layout"
        android:layout_width="@dimen/dimen_0_dp"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_rectangle_background"
        android:backgroundTint="@color/yellow_primary"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/home_nav_linear_layout">

        <ImageView
            android:layout_width="@dimen/dimen_20_dp"
            android:layout_height="match_parent"
            android:scaleType="centerInside"
            android:src="@drawable/ic_heart"
            app:tint="@color/neutral_01_black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dimen_16_dp"
            android:padding="@dimen/dimen_10_dp"
            android:text="@string/favorites_nav_text"
            android:textAlignment="center"
            android:textColor="@color/neutral_01_black" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>